# biasclear

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run_calibration.py
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: main.py
api/static/: index.html  privacy.html
app/: __init__.py  audit.py  auth.py  corrector.py  detector.py  logging.py  main.py  scorer.py
app/llm/: __init__.py  factory.py  gemini.py
app/patterns/: learned.py  proposer.py
app/schemas/: __init__.py  scan.py
biasclear/: __init__.py  audit.py  auth.py  cache.py  certificate.py  config.py  corrector.py  detector.py  frozen_core.py  logging.py  playground_token.py  rate_limit.py  scorer.py  signups.py
biasclear/llm/: __init__.py  bedrock.py  factory.py  gemini.py
biasclear/patterns/: __init__.py  learned.py  proposer.py
biasclear/schemas/: scan.py
calibration/: __init__.py  benchmark.py  comparative_benchmark.py  corpus_parser.py  optimizer.py
calibration/corpus/: financial_corpus.txt  general_corpus.txt  legal_corpus.txt  media_corpus.txt
docs/: GRANT_READINESS_BRIEF.md  OPERATIONS_CHECKLIST.md  PRODUCTION_DEPLOYMENT_SOURCE_OF_TRUTH.md  REVIEWER_PACKET.md
scripts/: smoke_check.sh
static/: index.html
tests/: test_api.py  test_calibration.py  test_corrector.py  test_frozen_core.py  test_infra.py  test_outage.py  test_phase1b.py  test_redteam.py  test_security.py
