[project]
name = "biasclear"
version = "1.1.0"
description = "Structural bias detection engine built on Persistent Influence Theory (PIT)."
readme = "README.md"
license = {text = "AGPL-3.0-only"}
authors = [{name = "Brad Slimp"}]
requires-python = ">=3.11"
keywords = ["bias", "nlp", "ai-safety", "fairness", "ethics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "python-dotenv",
    "google-genai>=1.0.0",
    "diff-match-patch>=20230430",
]

[project.urls]
Homepage = "https://biasclear.com"
Repository = "https://github.com/bws82/biasclear"

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["biasclear*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
